--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,41 +1,54 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<html lang="en">
+<head>
+    <title>hyperagent.js</title>
+    <meta http-requiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <meta name="description" content="hyperagent.js is a JavScript library for consuming HAL hypermedia APIs in the browser.">
+    <meta name="author" content="weluse GmbH">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/stylesheets/main.css">
+    <!-- Included CSS Files -->
+    <link rel="stylesheet" href="/stylesheets/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700,400italic|Droid+Serif" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <header role="banner">
+            <img class="site-logo" src="/images/weluse.svg" alt="weluse" width=120 height=50>
+            <nav role="navigation">
+                <li><a href="/" class="active">hyperagent.js</a></li>
+            </nav>
+        </header>
 
-    </head>
-    <body>
-        <div class="container">
-            <div class="header">
-                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-                <a class="extra" href="/">home</a>
+        <section role="main">
+            <div class="content">
+                {{ content }}
             </div>
+        </section>
 
-            {{ content }}
+        <footer role="contentinfo">
+            <ul>
+                <li class="footer-impress"><a href="https://weluse.de/contact"></a></li>
+                <li class="footer-message"><a href="mailto:phartig@weluse.de"></a></li>
+                <li class="footer-twitter"><a href="https://twitter.com/passy" target="_blank"></a></li>
+            </ul>
+            <a href="https://weluse.de/" target="_blank">
+                <img src="/images/weluse.svg" alt="weluse Logo"><br>
+                <small>Powered by weluse</small>
+            </p>
+        </footer>
+    </div>
+    <hr class="global">
 
-            <footer role="contentinfo">
-                <figure class="weluse">
-                    <a href="https://weluse.de/" target="_blank">
-                        <img src="/images/weluse.svg" alt="weluse Logo">
-                    </a>
-                </figure>
-                <address class="contact">
-                    Brought to you by<br>
-                    Pascal <a href="https://github.com/passy">@passy</a>
-                    Hartig<br>
-                    weluse GmbH
-                </address>
-            </footer>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        </div> <!-- /container -->
-    </body>
+        ga('create', 'UA-5361896-6', 'github.io');
+        ga('send', 'pageview');
+    </script>
+</body>
 </html>
