--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,7 +31,7 @@
         </header>
 
         <section role="main">
-            <div class="content">
+            <div class="content {{ page.css_class }}">
                 {{ content }}
             </div>
         </section>
