Added download bar

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,6 +31,15 @@
         </header>
 
         <section role="main">
+            <aside class="dlbar">
+                <h2>Get it</h2>
+                <ul>
+                    <li><a class="button download" href="https://github.com/passy/hyperagent/tarball/master">Download</a></li>
+                    <li><a class="button github" href="https://github.com/passy/hyperagent">View On GitHub</a></li>
+                </ul>
+
+                <p>Licensed under MIT</p>
+            </aside>
             <div class="content {{ page.css_class }}">
                 {{ content }}
             </div>
