--- a/sass/_app.sass
+++ b/sass/_app.sass
@@ -1,3 +1,4 @@
+@import "compass/css3/images"
 @import "layout/*.png"
 @import "colors"
 
@@ -235,6 +236,77 @@ hr.global
     p
         margin-top: 0
         text-align: justify
+
+.dlbar
+    float: left
+    position: fixed
+    width: 15em
+
+    @media screen and (max-width: 1480px)
+        float: none
+        position: relative
+        width: 50%
+        margin: 1em auto
+        border-radius: 4px
+
+        ul
+            position: absolute
+            right: 1em
+            top: 34px
+            margin: 0
+
+
+    background-color: #171717
+    color: #FDFDFB
+    border: 1px solid #000
+    border-top-right-radius: 4px
+    border-bottom-right-radius: 4px
+    padding: 34px 25px 22px 20px
+    margin: 30px 25px 0 0
+
+    ul
+        list-style: none
+        padding: 0
+
+    li
+        width: 12em
+        height: 30px
+        margin-bottom: 12px
+        line-height: 1em
+        padding: 4px 5px 5px 7px
+
+        background: #AF0011
+        +background(linear-gradient(top, #AF0011 0%, #820011 100%))
+
+        border-radius: 4px
+        border: 1px solid #0D0D0D
+
+        box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1)
+
+        &:hover
+            background: #C3001D
+            +background(linear-gradient(top, #C3001D 0%, #950119 100%))
+
+    p
+        margin: 0.5em 0
+
+.button
+    font-weight: normal
+    text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 0
+    padding: 2px 2px 2px 22px
+    height: 19px
+    display: block
+    color: white
+
+    &.download
+        +layout-sprite(arrow_down)
+
+    &.github
+        +layout-sprite(octocat)
+
+
+.button:hover
+    color: #fff
 
 // =============
 // CONTENT HACKS
