Added install page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,8 +34,8 @@
             <aside class="dlbar">
                 <h2>Get it</h2>
                 <ul>
-                    <li><a class="button download" href="https://github.com/passy/hyperagent/tarball/master">Download</a></li>
-                    <li><a class="button github" href="https://github.com/passy/hyperagent">View On GitHub</a></li>
+                    <li><a class="button download" href="/install/">Download</a></li>
+                    <li><a class="button github" href="https://github.com/weluse/hyperagent">View On GitHub</a></li>
                 </ul>
 
                 <p>Licensed under MIT</p>
