--- a/sass/_app.sass
+++ b/sass/_app.sass
@@ -1,4 +1,5 @@
 @import "compass/css3/images"
+@import "compass/css3/hyphenation"
 @import "layout/*.png"
 @import "colors"
 
@@ -234,6 +235,7 @@ hr.global
         text-transform: uppercase
 
     p
+        +hyphens(auto)
         margin-top: 0
         text-align: justify
 
