--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -52,13 +52,13 @@ a:hover {
   background: url('../images/layout-s88542c9f69.png') no-repeat;
 }
 
-/* line 7, ../sass/_app.sass */
+/* line 8, ../sass/_app.sass */
 html {
   height: 100%;
   font-size: 62.5%;
 }
 
-/* line 11, ../sass/_app.sass */
+/* line 12, ../sass/_app.sass */
 body {
   font-size: 16px;
   font-size: 1.6rem;
@@ -66,17 +66,17 @@ body {
   height: 100%;
 }
 
-/* line 15, ../sass/_app.sass */
+/* line 16, ../sass/_app.sass */
 > .container {
   height: 100%;
 }
 
-/* line 19, ../sass/_app.sass */
+/* line 20, ../sass/_app.sass */
 a {
   text-decoration: none;
 }
 
-/* line 22, ../sass/_app.sass */
+/* line 23, ../sass/_app.sass */
 hr.global {
   position: fixed;
   left: 0;
@@ -87,14 +87,14 @@ hr.global {
   width: 100%;
 }
 
-/* line 33, ../sass/_app.sass */
+/* line 34, ../sass/_app.sass */
 *, ::before, ::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 96, ../sass/_app.sass */
+/* line 97, ../sass/_app.sass */
 [role=banner] {
   max-width: 960px;
   margin: 0 auto;
@@ -103,41 +103,41 @@ hr.global {
   min-height: 5em;
 }
 @media screen and (max-width: 999px) {
-  /* line 96, ../sass/_app.sass */
+  /* line 97, ../sass/_app.sass */
   [role=banner] {
     max-width: 960px;
     margin: 20px;
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 96, ../sass/_app.sass */
+  /* line 97, ../sass/_app.sass */
   [role=banner] {
     max-width: 600px;
     margin: 20px;
   }
 }
 @media screen and (min-width: 641px) {
-  /* line 96, ../sass/_app.sass */
+  /* line 97, ../sass/_app.sass */
   [role=banner] {
     padding-top: 1em;
     padding-bottom: 1em;
   }
 }
 @media screen and (min-width: 800px) {
-  /* line 96, ../sass/_app.sass */
+  /* line 97, ../sass/_app.sass */
   [role=banner] {
     padding-top: 3em;
     padding-bottom: 1em;
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 96, ../sass/_app.sass */
+  /* line 97, ../sass/_app.sass */
   [role=banner] {
     text-align: center;
     margin-top: 0.5em;
   }
 }
-/* line 117, ../sass/_app.sass */
+/* line 118, ../sass/_app.sass */
 [role=banner] .site-logo {
   width: 210px;
   height: 22px;
@@ -146,26 +146,26 @@ hr.global {
   bottom: 1em;
 }
 @media screen and (max-width: 640px) {
-  /* line 117, ../sass/_app.sass */
+  /* line 118, ../sass/_app.sass */
   [role=banner] .site-logo {
     position: static;
     margin: 1em auto;
   }
 }
 
-/* line 130, ../sass/_app.sass */
+/* line 131, ../sass/_app.sass */
 [role=navigation] ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-/* line 135, ../sass/_app.sass */
+/* line 136, ../sass/_app.sass */
 [role=navigation] li {
   text-transform: uppercase;
   display: inline-block;
 }
 @media screen and (min-width: 501px) {
-  /* line 140, ../sass/_app.sass */
+  /* line 141, ../sass/_app.sass */
   [role=navigation] li:before {
     color: #75716f;
     font-weight: bold;
@@ -173,62 +173,62 @@ hr.global {
     font-size: 95%;
     vertical-align: top;
   }
-  /* line 148, ../sass/_app.sass */
+  /* line 149, ../sass/_app.sass */
   [role=navigation] li:first-child:before {
     content: "";
   }
 }
-/* line 151, ../sass/_app.sass */
+/* line 152, ../sass/_app.sass */
 [role=navigation] li.active a {
   color: #ce1b1b;
 }
 @media screen and (max-width: 500px) {
-  /* line 135, ../sass/_app.sass */
+  /* line 136, ../sass/_app.sass */
   [role=navigation] li {
     display: block;
     padding: 0.5em 0;
     border-bottom: 1px solid #e3e3e2;
   }
-  /* line 161, ../sass/_app.sass */
+  /* line 162, ../sass/_app.sass */
   [role=navigation] li:first-child {
     border-top: 1px solid #e3e3e2;
   }
 }
 
-/* line 164, ../sass/_app.sass */
+/* line 165, ../sass/_app.sass */
 [role=main] {
-  background: url('../images/bg_tile.png?1368269604') repeat;
+  background: url('../images/bg_tile.png?1368269874') repeat;
   clear: both;
   min-height: 80%;
   border-top: 1px solid #e3e3e2;
 }
 @media screen and (max-width: 500px) {
-  /* line 164, ../sass/_app.sass */
+  /* line 165, ../sass/_app.sass */
   [role=main] {
     border-top: none;
   }
 }
-/* line 174, ../sass/_app.sass */
+/* line 175, ../sass/_app.sass */
 [role=main] > .content {
   max-width: 960px;
   margin: 0 auto;
 }
 @media screen and (max-width: 999px) {
-  /* line 174, ../sass/_app.sass */
+  /* line 175, ../sass/_app.sass */
   [role=main] > .content {
     max-width: 960px;
     margin: 20px;
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 174, ../sass/_app.sass */
+  /* line 175, ../sass/_app.sass */
   [role=main] > .content {
     max-width: 600px;
     margin: 20px;
   }
 }
 
-/* line 178, ../sass/_app.sass */
+/* line 179, ../sass/_app.sass */
 [role=contentinfo] {
   max-width: 960px;
   margin: 0 auto;
@@ -236,24 +236,24 @@ hr.global {
   text-align: center;
 }
 @media screen and (max-width: 999px) {
-  /* line 178, ../sass/_app.sass */
+  /* line 179, ../sass/_app.sass */
   [role=contentinfo] {
     max-width: 960px;
     margin: 20px;
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 178, ../sass/_app.sass */
+  /* line 179, ../sass/_app.sass */
   [role=contentinfo] {
     max-width: 600px;
     margin: 20px;
   }
 }
-/* line 184, ../sass/_app.sass */
+/* line 185, ../sass/_app.sass */
 [role=contentinfo] ul {
   padding: 0;
 }
-/* line 187, ../sass/_app.sass */
+/* line 188, ../sass/_app.sass */
 [role=contentinfo] li {
   -webkit-border-radius: 1.5em;
   -moz-border-radius: 1.5em;
@@ -272,71 +272,71 @@ hr.global {
   background-color: #75716f;
   background-color: rgba(117, 113, 111, 0.25);
 }
-/* line 200, ../sass/_app.sass */
+/* line 201, ../sass/_app.sass */
 [role=contentinfo] li:hover {
   background-color: rgba(117, 113, 111, 0.5);
 }
-/* line 203, ../sass/_app.sass */
+/* line 204, ../sass/_app.sass */
 [role=contentinfo] li a {
   display: inline-block;
   width: 100%;
   height: 100%;
 }
-/* line 210, ../sass/_app.sass */
+/* line 211, ../sass/_app.sass */
 [role=contentinfo] li a:after {
   content: "";
   display: inline-block;
   margin-top: 0.6em;
 }
-/* line 219, ../sass/_app.sass */
+/* line 220, ../sass/_app.sass */
 [role=contentinfo] .footer-impress a:after {
   width: 30px;
   height: 30px;
   background-position: 0 -51px;
 }
-/* line 219, ../sass/_app.sass */
+/* line 220, ../sass/_app.sass */
 [role=contentinfo] .footer-message a:after {
   width: 30px;
   height: 30px;
   background-position: 0 -111px;
 }
-/* line 219, ../sass/_app.sass */
+/* line 220, ../sass/_app.sass */
 [role=contentinfo] .footer-twitter a:after {
   width: 30px;
   height: 30px;
   background-position: 0 -81px;
 }
 
-/* line 54, ../sass/_app.sass */
+/* line 55, ../sass/_app.sass */
 .prose p {
   width: 30%;
   float: left;
   margin-left: 5%;
 }
-/* line 59, ../sass/_app.sass */
+/* line 60, ../sass/_app.sass */
 .prose p:first-child {
   margin-left: 0;
 }
-/* line 62, ../sass/_app.sass */
+/* line 63, ../sass/_app.sass */
 .prose:after {
   display: block;
   content: "";
   clear: both;
 }
 @media screen and (max-width: 999px) and (min-width: 641px) {
-  /* line 68, ../sass/_app.sass */
+  /* line 69, ../sass/_app.sass */
   .prose p {
     width: 40%;
     float: left;
     margin-left: 5%;
     margin-right: 5%;
   }
-  /* line 74, ../sass/_app.sass */
+  /* line 75, ../sass/_app.sass */
   .prose p:first-child {
     margin-left: 5%;
     margin-right: 5%;
   }
-  /* line 78, ../sass/_app.sass */
+  /* line 79, ../sass/_app.sass */
   .prose:after {
     display: block;
     content: "";
@@ -344,24 +344,27 @@ hr.global {
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 84, ../sass/_app.sass */
+  /* line 85, ../sass/_app.sass */
   .prose p {
     width: 100%;
     float: none;
     margin-left: 0;
   }
 }
-/* line 233, ../sass/_app.sass */
+/* line 234, ../sass/_app.sass */
 .prose strong {
   text-transform: uppercase;
 }
-/* line 236, ../sass/_app.sass */
+/* line 237, ../sass/_app.sass */
 .prose p {
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
   margin-top: 0;
   text-align: justify;
 }
 
-/* line 240, ../sass/_app.sass */
+/* line 242, ../sass/_app.sass */
 .dlbar {
   float: left;
   position: fixed;
@@ -376,7 +379,7 @@ hr.global {
   margin: 30px 25px 0 0;
 }
 @media screen and (max-width: 1480px) {
-  /* line 240, ../sass/_app.sass */
+  /* line 242, ../sass/_app.sass */
   .dlbar {
     float: none;
     position: relative;
@@ -384,7 +387,7 @@ hr.global {
     margin: 1em auto;
     border-radius: 4px;
   }
-  /* line 253, ../sass/_app.sass */
+  /* line 255, ../sass/_app.sass */
   .dlbar ul {
     position: absolute;
     right: 1em;
@@ -393,38 +396,38 @@ hr.global {
   }
 }
 @media screen and (max-width: 790px) {
-  /* line 260, ../sass/_app.sass */
+  /* line 262, ../sass/_app.sass */
   .dlbar p {
     display: none;
   }
 }
 @media screen and (max-width: 475px) {
-  /* line 240, ../sass/_app.sass */
+  /* line 242, ../sass/_app.sass */
   .dlbar {
     width: 90%;
   }
-  /* line 266, ../sass/_app.sass */
+  /* line 268, ../sass/_app.sass */
   .dlbar ul {
     position: static;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 271, ../sass/_app.sass */
+  /* line 273, ../sass/_app.sass */
   .dlbar li {
     display: inline-block;
     text-align: left;
   }
-  /* line 275, ../sass/_app.sass */
+  /* line 277, ../sass/_app.sass */
   .dlbar h2, .dlbar p {
     display: none;
   }
 }
-/* line 287, ../sass/_app.sass */
+/* line 289, ../sass/_app.sass */
 .dlbar ul {
   list-style: none;
   padding: 0;
 }
-/* line 291, ../sass/_app.sass */
+/* line 293, ../sass/_app.sass */
 .dlbar li {
   width: 12em;
   height: 30px;
@@ -441,7 +444,7 @@ hr.global {
   border: 1px solid #0d0d0d;
   box-shadow: inset 0px 1px 1px 0 #e90226;
 }
-/* line 306, ../sass/_app.sass */
+/* line 308, ../sass/_app.sass */
 .dlbar li:hover {
   background: #c3001d;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #c3001d), color-stop(100%, #950119));
@@ -450,12 +453,12 @@ hr.global {
   background: -o-linear-gradient(top, #c3001d 0%, #950119 100%);
   background: linear-gradient(top, #c3001d 0%, #950119 100%);
 }
-/* line 310, ../sass/_app.sass */
+/* line 312, ../sass/_app.sass */
 .dlbar p {
   margin: 0.5em 0;
 }
 
-/* line 313, ../sass/_app.sass */
+/* line 315, ../sass/_app.sass */
 .button {
   font-weight: normal;
   text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 0;
@@ -464,25 +467,25 @@ hr.global {
   display: block;
   color: white;
 }
-/* line 321, ../sass/_app.sass */
+/* line 323, ../sass/_app.sass */
 .button.download {
   background-position: 0 -160px;
 }
-/* line 324, ../sass/_app.sass */
+/* line 326, ../sass/_app.sass */
 .button.github {
   background-position: 0 -141px;
 }
 
-/* line 328, ../sass/_app.sass */
+/* line 330, ../sass/_app.sass */
 .button:hover {
   color: white;
 }
 
-/* line 336, ../sass/_app.sass */
+/* line 338, ../sass/_app.sass */
 .content.index h1:not(.intro) {
   display: none;
 }
-/* line 339, ../sass/_app.sass */
+/* line 341, ../sass/_app.sass */
 .content.index h1:not(.intro) + p {
   display: none;
 }
